core/rbc-api/overlays/staging/patches/deployment.namespace.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbc-rbc-api
spec:
  template:
    spec:
      containers:
      - name: rbc-api
