core/rbc-api/overlays/staging/patches/ingress.staging.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbc-rbc-api
spec:
  rules:
  - host: api-staging.curiouscommunities.net
    http:
      paths:
      - backend:
          service:
            name: rbc-rbc-api
            port:
              number: 3000
        path: /api/?(.*)
        pathType: Prefix
